# voicebox

./: .gitignore  Dockerfile.asr  INSTALL.md  Makefile  PACKAGING.md  PUBLISHING.md  README.md  RUNNING.md  build.py  design.md  gui.py  gui_test.py  install-uv.sh  pyproject.toml  requirements.txt  voicebox
.github/workflows/: release.yml
scripts/: build-all.sh  create-release.sh  package.py
src/: __init__.py  main.py
src/api/: auth.py  server.py
src/audio/: capture.py
src/commands/: __init__.py  detector.py  openrouter_models.py  processor.py  responder.py
src/config/: manager.py
src/data/: collector.py
src/system/: hotkeys.py  text_insertion.py
src/text/: __init__.py  corrections.py  substitutions.py  vocabulary.py
src/transcription/: api.py  base.py  local.py  qwen_asr.py
src/ui/: gui.py  review.py  setup_wizard.py  widgets.py
src/utils/: __init__.py  error_suggestions.py  logging.py  notify.py  retry.py  singleton.py
tests/: test_api_context.py  test_audio.py  test_auth.py  test_corrections.py
