[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicebox"
version = "1.0.0"
description = "Cross-platform voice-to-text transcription tool"
authors = [{name = "VoiceBox Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "pystray>=0.19.4",
    "Pillow>=10.0.0",
    "faster-whisper>=0.10.0",
    "openai>=1.3.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
voicebox = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]